# fdmb

./: CMakeLists.txt  README.md
fit/: CMakeLists.txt  arfit.cpp  emfit.cpp  emfitEstimateError.cpp
global/: fit.h  global.cpp  global.h  libraries.h
python/: CMakeLists.txt  setup.py.in
python/fdmb/: __init__.py  fdmb.py  fit.py  libfit.py
python/pyinterface/: CMakeLists.txt  fdmb.py  libfit.py  pyFit.cpp
python/tests/: fit_arfit.py
python_bindings/: CMakeLists.txt  pyFit.cpp  pyFit.h
tests/: ar2Data.README  fit_arfit.py  fit_emfit.py  fit_emfit_fixedData.py  fit_emfit_fixedData_correctInitials.py  testEMFit.py
